blocks/form/form.css
/* ... */
main .form form .wizard .wizard-menu-item {
  counter-increment: wizard-step-counter;
}

main .form form .wizard .wizard-menu-item::before {
  content: counter(wizard-step-counter);
  border: 2px solid var(--form-wizard-number-color);
  color: var(--form-wizard-number-color);
  border-radius: 50%;
  width: 35px;
  height: 35px;
  margin-right: 10px;
  text-align: center;
  line-height: 2;
  display: inline-block;
}

main .form form .wizard .wizard-menu-active-item::before{
  border: 2px solid var(--form-wizard-number-color);
  background: var(--form-wizard-number-color);
  color: var(--form-styles-background-color-primary);
  font-weight: 600;
}

@media (min-width: 600px) {
    main .form button {
        width: unset;
    }
}

/* wizard title on left */
main .form form .wizard.left{
  display: flex;
}

main .form form .wizard.left .wizard-menu-items{
  flex-direction: column;
  width: 300px;
}

main form .panel-wrapper {
  display: flex;
  padding: 0;
  flex-direction: column;
}

main .form form .panel-wrapper{
  display: grid;
  grid-template-columns: repeat(var(--form-columns), minmax(0, 1fr));
  gap: var(--form-field-vert-gap) 0;
}

main .form form .repeat-wrapper{
    display: grid;
    grid-template-columns: repeat(var(--form-columns), minmax(0, 1fr));
    gap: var(--form-field-vert-gap) var(--form-field-horz-gap);
}

main .get-a-quote-form-alternate form .panel-wrapper {
    gap:unset;
}

main .campaign-form.form form .panel-wrapper {
    padding: 5px;
    background-color: var(--color-gray);
    display: block;
}

main .get-a-quote-form-alternate.grey-background form .panel-wrapper{
    background-color: var(--color-gray);
}

main .form form .wizard.left .panel-wrapper{
  flex: 1;
}

@media (min-width: 1200px) {
    main .form form .checkbox-wrapper,
    main .form form .form-textarea-wrapper,
    main .form form .file-wrapper,
    main .form form .panel-wrapper {
        flex: 1 0 100%;
    }

    main .form form .panel-wrapper{
        gap: var(--form-field-vert-gap) var(--form-field-horz-gap);
    }

    main .form form .panel-wrapper {
        flex-flow: row wrap;
        gap: 10px 15px;
    }
}

main .form .form-message.success-message {
    border-color: #badbcc;
    flex: 100%;
    grid-column: span 12;
    padding: 10px;

     a[href$='.pdf'] {
         background-color: var(--color-button-primary);
         border-color: var(--color-button-primary);
         color: var(--color-black);
         display: flex;
         text-decoration: none;
         padding: 0 32px;
         line-height: 32px;
         text-align: center;
         font-style: normal;
         font-weight: 600;
         cursor: pointer;
         margin: 16px 0;
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
         border-radius: 100px;
         justify-content: center;
    }
}

main .form .form-message.error-message {
    color: #842029;
    flex: 100%;
    grid-column: span 12;
}

main .form .form-message.error-message p {
    color:var(--form-error-color);
}

main .form .file-wrapper .file-drag-area {
  border: 1px dashed var(--form-styles-border-color);
  border-radius: 5px;
  padding: 10px 5px;
  display: flex;
  flex-direction: column;
  gap: 20px;
  justify-content: center;
  align-items: center;
}

/* grid css */
main .form form .field-wrapper .field-description{
  grid-column: span 12;
}

main .form form .field-wrapper.col-12 {
    grid-column: span 12;
}

main .form form .field-wrapper.col-11 {
    grid-column: span 11;
}

main .form form .field-wrapper.col-10 {
  grid-column: span 10;
}

main .form form .field-wrapper.col-9 {
    grid-column: span 9;
}

main .form form .field-wrapper.col-8 {
    grid-column: span 8;
}

main .form form .field-wrapper.col-7 {
    grid-column: span 7;
}

main .form form .field-wrapper.col-6 {
      grid-column: span 6;
}

main .form form .field-wrapper.col-5 {
      grid-column: span 5;
}

main .form form .field-wrapper.col-4 {
      grid-column: span 4;
}

main .form form .field-wrapper.col-3 {
      grid-column: span 3;
}

main .form form .field-wrapper.col-2 {
      grid-column: span 2;
}

main .form form .field-wrapper.col-1 {
    grid-column: span 1;
}

main .form .form-image-wrapper  img {
  max-width: 100%;
  height: auto;
}

main form .wizard > .current-wizard-step.panel-wrapper:first-of-type ~ .wizard-button-wrapper > .wizard-button-prev,
main form .wizard > .current-wizard-step.panel-wrapper:last-of-type ~ .wizard-button-wrapper > .wizard-button-next {
    display: none;
}

main form .wizard > .wizard-button-wrapper > .submit-wrapper {
    display: none;
    width: unset;
}

main form .wizard >
.current-wizard-step.panel-wrapper:last-of-type ~ .wizard-button-wrapper > .submit-wrapper {
    display: block;
}

/** floating labels **/
main .form .field-wrapper.floating-field {
    display: flex;
    flex-direction: column;
    position: relative;
}

main .form .field-wrapper.floating-field > label {
    padding: 9px 0 0 1rem;
    position: absolute;
    transition: .3s cubic-bezier(.25,.8,.5,1);
    top: 10px;
}

main .form form .panel-wrapper.field-frequncy .radio-wrapper label{
    color: var(--color-white);
    cursor: pointer;
}

/* Style for labels when input is focused */
main .form .field-wrapper.floating-field input:not([type='radio'], [type='checkbox'], :placeholder-shown) + label,
main .form .field-wrapper.floating-field input:not([type='radio'], [type='checkbox']):focus + label{
    padding: 15px 0 0 15px;
    font-size: 10px;
    color: var(--color-disabled);
    transform: translateY(-15px);
    z-index: 1;
}

main .form .field-wrapper.floating-field input:not([type='radio'], [type='checkbox']) {
    padding-top: 1.5rem;
    padding-bottom: .5rem;
}

 /* hide placeholder when not focused */
 main .form input:not(:placeholder-shown)::placeholder,
 main .form input:placeholder-shown:not(:focus)::placeholder {
    color: transparent;
}
/* ... */

